# uneemi-mlops

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dags/: feature_pipeline.py  monitoring_pipeline.py  training_pipeline.py
docs/: architecture.md  backlog.md  benchmark_results.md  goal_and_metrics.md  manifest.md  metrics_and_benchmarks.md  sanity_results.md  sli_slo.md  verification_run.md
docs/mdd/: ADR-0001-latency.md  analysis.py
docs/screenshots/: README.md
feature_repo/: feature_store.yaml  profile_features.py
infra/: .env.example  Dockerfile.airflow  Dockerfile.mlflow  Makefile  docker-compose.yml  e2e.sh  init.sql  make.ps1  requirements-airflow.txt  smoke.sh
infra/terraform/: README.md  cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
monitoring/: __init__.py  evidently_job.py  prometheus.yml
monitoring/grafana/dashboards/: uneemi_overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: bench_inference.py  bootstrap_model.py  export_onnx.py  fetch_demo_images.py  sanity_imagenet.py  sanity_imagenet_256_ref.py  sanity_xm3600_ru.py
serving/: Dockerfile  app.py  requirements.txt
src/uneemi_ml/: __init__.py  config.py  demo.py  features.py  model.py  preprocess.py
tests/: test_bench.py  test_features.py  test_sanity_scripts.py  test_smoke.py  test_training.py
training/: __init__.py  clean.py  data_gen.py  evaluate.py  feast_ops.py  prepare.py  promote.py  train.py  validate.py
(+1 files in other folders)
