[project]
name = "uneemi-ml"
version = "0.1.0"
description = "Uneemi ML: SigLIP 2 vision encoder pipeline для вайб-матчинга через визуальные доски."
authors = [
    { name = "Sergei Volkhin", email = "64906744+SergeiVolkhin@users.noreply.github.com" },
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.4.6",
    "onnxruntime>=1.18",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "torch>=2.3",
    "transformers>=4.49",
]

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "datasets>=2.18",
    "onnx>=1.16",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
